feat(backend): implement local stable-diffusion.cpp proxy and robust base64 image parsing